--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
+    overflow: hidden;
 }
 
 #idleScreen {
@@ -30,6 +31,20 @@ body {
     width: 100vw;
     height: 100vh;
     justify-content: center;
+}
+
+#idleHolder {
+    margin-top: 120px;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 800ms
+}
+
+#idleHolder.active {
+    margin-top: 0;
+    opacity: 1;
 }
 
 .idleTitle {
@@ -80,4 +95,28 @@ body {
 .idleRefresh:hover {
     box-shadow: 0 0 0 5px #fff2;
     color: #ff4b6f;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.socialsContainer {
+    margin-top: 20px;
+}
+
+.socialImg {
+    margin-right: 15px;
+    width: 35px;
+    transition: 300ms;
+    cursor: pointer;
+}
+
+.socialImg:last-of-type {
+    margin-right: 0;
+}
+
+.socialImg:hover {
+    transform: scale(.95);
 }
