--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,8 +22,7 @@ body {
 }
 
 #idleScreen {
-    padding: 20px;
-    background: linear-gradient(45deg, #ff6e6e, #ff5f5f);
+    background: linear-gradient(45deg, #793636, #851414);
     color: white;
     display: flex;
     align-items: center;
@@ -32,6 +31,7 @@ body {
     height: 100vh;
     justify-content: center;
     z-index: -9;
+    position: fixed;
 }
 
 .iconOutlined {
@@ -48,14 +48,11 @@ body {
 }
 
 #idleHolder {
-    margin-top: 120px;
-    opacity: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     transition: 800ms;
     background: #00000099;
-    border-bottom: 15px solid #af324b;
     padding: 8px;
     border-radius: 4px;
     z-index: 5;
@@ -82,7 +79,6 @@ body {
 }
 
 .idleSubtitle {
-    background: #fff4;
     padding: 8px;
     border-radius: 4px;
     margin-bottom: 8px;
@@ -139,3 +135,6 @@ a {
 .socialImg:hover {
     transform: scale(.95);
 }
+
+
+/* game */
