--- a/src/css/web.css
+++ b/src/css/web.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: #303030;
+    background: #282828;
 }
 
 #loader {
@@ -96,4 +96,127 @@ body {
         height: 72px;
         opacity: 0;
     }
+}
+
+.loginButton {
+    width: 110px;
+    padding: 12px;
+    border-radius: 4px;
+    background: var(--accent);
+    border: 0;
+    margin: 8px;
+    font-size: 18px;
+    transition: .3s;
+    cursor: pointer;
+}
+
+#navBar {
+    background: #ffffff26;
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.loginButton:hover {
+    box-shadow: 0 0 0 5px #fff3;
+}
+
+.title {
+    font-size: 24px;
+    margin-left: 8px;
+}
+
+.navLeft {
+    display: flex;
+    align-items: center;
+}
+
+.navRight {
+    margin-right: 12px;
+    display: flex;
+    flex-direction: row;
+}
+
+.navItem {
+    padding: 12px;
+    margin-right: 8px;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.navItem:hover {
+    background: #fff2;
+    box-shadow: inset 0 0 0 2.5px var(--accent);
+}
+
+.content {
+    width: 100vw;
+    height: 90vh;
+    position: absolute;
+    z-index: -1;
+    margin: 0;
+    top: 10vh;
+    left: 0;
+    background: #0000;
+    overflow-y: auto;
+}
+
+.section-title {
+    padding: 12px;
+    margin: 8px;
+    font-size: 32px;
+    border-bottom: 2px solid #fff5;
+}
+
+.moveContainer {
+    background: #ce4342;
+    width: calc(100vw - 5%);
+    padding: 12px;
+    border-radius: 8px;
+    overflow-y: auto;
+}
+
+.sectionContent {
+    display: flex;
+    justify-content: center;
+}
+
+.comboItem,
+.specialItem {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 4px;
+    border-bottom: 2px solid #fff5;
+    padding: 8px;
+    transition: .4s;
+    align-items: center;
+}
+
+.comboItem:last-of-type,
+.specialItem:last-of-type {
+    border-bottom: 0;
+    margin-bottom: 0
+}
+
+.enhancementList {
+    padding: 12px;
+    background: #0c111a;
+    border-radius: 8px;
+    width: calc(100vw - 15%);
+}
+
+.enhancementItem {
+    padding: 16px;
+    border-bottom: 1px solid #fff5;
+}
+
+.enhancementItem:last-of-type {
+    border-bottom: 0
+}
+
+.en-name {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
